Commit 11/10/23 - fixed pb overflow x hidden portfolio part

--- a/src/css/Portfolio.css
+++ b/src/css/Portfolio.css
@@ -49,7 +49,6 @@
     flex-direction: column;
     position: relative;
     background-color: #02020D;
-    overflow-x: hidden;
 }
 
 .link-title {
@@ -171,7 +170,7 @@ progress::-moz-progress-bar {
 
 .sidebar {
     position: fixed;
-    width: 30%;
+    width: 35%;
     height: 100%;
     top: 2%;
     right: 0;
